
Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.10
  -  Added language files
     * BASCOM AVR (Michal Goralczyk)
     * C: Loadrunner dialect (Stuart Moncrieff)
     * CoffeeScript (Trevor Burnham)
     * EPC (Thorsten Muehlfelder)
     * Falcon (billykater)
     * LLVM (Azriel Fasten)
     * UnrealScript (pospi)
     * YAML (Josh Ventura)
  -  Small bugfix in LangCheck when looking for language files
  -  Added '-' to list of RX chars that require explicit escaping (SF#3056454, BenBE)
  -  Minor changes to boundary checks (SF#3077256, BenBE)
  -  Improvements to language files (BenBE)
     * Major rework of the ALGOL68 language file (Neville Dempsey)
     * LangCheck warnings from GO language file (BenBE)
     * Some additions to the Objeck language file (Randy Hollines)
     * Properly highlight infinity as numbers for J (Ric Sherlock)
     * Improved GDB Backtrace language file (Milian Wolff)
     * Updated Liberty BASIC language file (Chris Iverson)
     * Fixed a small issue with detection of division vs. regular expressions
       for ActionScript 3 and JavaScript (Kevin Day)
     * Fixed Escape handling for CSS (SF#3080513, yecril71pl, BenBE)
     * Additional comment styles for SAS (SF#3024708, ahnolds, BenBE)
     * Updated keyword list for TeraTerm (Boris Maisuradze)
     * Incorrect handling of /**/ comments in Javascript (BenBE)
     * Support for mod_upload_progress in Apache Config files (BenBE)
     * Prefix operator handling in F# was broken (BenBE)
     * CDATA handling for html4strict (BenBE)
Version 1.0.8.9
  -  Added language files
     * Algol68 (Neville Dempsey)
     * E (Kevin Reid)
     * FormulaOne (Juro Bystricky)
     * Go (Markus Jarderot)
     * Liberty BASIC (Chris Iverson)
     * MOS 6502/6510 Assemblers (Warren Willmey)
     * Motorola 68k assembler (Warren Willmey)