@@ -19,6 +19,7 @@ Version 1.0.8.10
      * CoffeeScript (Trevor Burnham)
      * EPC (Thorsten Muehlfelder)
      * Falcon (billykater)
+     * HTML5 (Robert Lidberg)
      * LLVM (Azriel Fasten)
      * UnrealScript (pospi)
      * YAML (Josh Ventura)
